# dend-postgres-modelling

./: .gitignore  README.md  create_tables.py  etl.ipynb  etl.py  pyproject.toml  sql_queries.py
