[tool.poetry]
name = "postgres-data-modelling"
version = "0.1.0"
description = ""
authors = ["Kelvin Jayanoris <kjayanoris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
psycopg2-binary = "^2.8.4"
pandas = "^0.25.3"
jupyterlab = "^1.2.5"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pep8 = "^1.7.1"
flake8 = "^3.7.9"
black = "^19.10b0"
pycodestyle = "^2.5.0"
pydocstyle = "^5.0.2"
autopep8 = "^1.5"
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
